--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,4 +1,71 @@
+body {
+	font-family: 'Ubuntu', sans-serif;
+	background-color: #f7f7f7;
+	margin: 0;
+	padding: 0;
+	display: flex;
+	justify-content: center;
+	height: 100vh;
+	padding-top: 2rem;
+}
+
 .container {
-  max-width: 800px;
-  margin: auto;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 20px;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+form {
+	background-color: white;
+	padding: 30px;
+	border-radius: 12px;
+	box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+	width: 100%;
+	min-width: 20rem;
+}
+
+h1 {
+	text-align: center;
+	margin-bottom: 20px;
+	color: #333;
+}
+
+label {
+	display: block;
+	font-weight: bold;
+	margin-bottom: 6px;
+	color: #555;
+}
+
+input {
+	width: 100%;
+	padding: 10px;
+	border: 1px solid #ddd;
+	border-radius: 8px;
+	margin-bottom: 20px;
+	box-sizing: border-box;
+	cursor: pointer;
+}
+
+button {
+	width: 100%;
+	padding: 12px;
+	background-color: #007bff;
+	border: none;
+	color: white;
+	font-size: 16px;
+	border-radius: 8px;
+	cursor: pointer;
+	transition: background-color 0.3s ease;
+
+	&:hover {
+		background-color: #0056b3;
+	}
+}
+
+.cursor-pointer {
+	cursor: pointer;
 }
